--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.5.0
 anyio==3.7.1
 async-timeout==4.0.3
+attrs==23.1.0
 certifi==2023.7.22
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
@@ -20,8 +22,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.3
+outcome==1.2.0
+packaging==23.1
 pendulum==2.1.2
 Pillow==10.0.0
+pycparser==2.21
 pycryptodomex==3.18.0
 pydantic==1.10.9
 pydantic-core==2.4.0
@@ -35,12 +40,18 @@ pytzdata==2020.1
 PyYAML==6.0.1
 redis==4.6.0
 requests==2.31.0
+selenium==4.11.2
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 starlette==0.27.0
+trio==0.22.2
+trio-websocket==0.10.3
 typing-extensions==4.7.1
 ujson==5.8.0
 urllib3==2.0.4
 uvicorn==0.23.2
 watchfiles==0.19.0
+webdriver-manager==4.0.0
 websockets==11.0.3
+wsproto==1.2.0
