--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,12 @@ email-validator==2.0.0.post2
 exceptiongroup==1.1.2
 fastapi==0.101.0
 fastapi-cache2==0.2.1
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.17.3
 httptools==0.6.0
 httpx==0.24.1
 idna==3.4
-instagrapi==1.19.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
@@ -28,8 +28,8 @@ pendulum==2.1.2
 Pillow==10.0.0
 pycparser==2.21
 pycryptodomex==3.18.0
-pydantic==1.10.9
-pydantic-core==2.4.0
+pydantic==2.2.1
+pydantic-core==2.6.1
 pydantic-extra-types==2.0.0
 pydantic-settings==2.0.2
 PySocks==1.7.1
